# crowdsec-wasm-bouncer

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  README_TEST.md  config.json  docker-compose.yml  envoy.yaml  go.mod  go.sum  http.go  main.go  plugin.go  test.sh
.github/workflows/: ci.yml  release.yml
docs/: architecture.mmd  request-flow.mmd
src/: config.rs  http.rs  lib.rs  plugin.rs
tests/: docker-compose.yml  envoy-async.yaml  envoy-failopen.yaml  envoy.yaml  run_tests.sh
tests/crowdsec/: acquis.yaml
tests/crowdsec/appsec-configs/: appsec-default.yaml  crs-inband.yaml  crs.yaml  default-appsec-config.yaml  generic-rules.yaml  virtual-patching.yaml
