[package]
name = "crowdsec-wasm-bouncer"
version = "0.1.0"
edition = "2021"

[lib]
name = "crowdsec_wasm_bouncer"
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

[profile.release]
lto = true
opt-level = "s"
strip = true
